# CORApy

./: .gitignore  .gitmodules  A.py  AUX_POP_COMPARISON.md  B.py  COMPARISON_ERROR_ADM_HORIZON.md  COMPARISON_PLAN.md  Cora2025.1.0_Manual.txt  DERIVE_DEPENDENCY_CHECK.md  EAT_INVESTIGATION_SUMMARY.md  FGSM_ATTACK_CONSTRUCTION_ANALYSIS.md  FLOAT32_ANALYSIS_AND_FIX.md  FLOAT32_FIXES_APPLIED.md  FLOAT64_ENFORCEMENT_SUMMARY.md  GENERATOR_COLLAPSE_ANALYSIS.md  HYBRID_DYNAMICS_DEPENDENCY_CHECK.md  HYBRID_DYNAMICS_DEPENDENCY_STATUS.md  HYBRID_DYNAMICS_DEPENDENCY_VERIFICATION_COMPLETE.md  INVESTIGATION_SUMMARY.md  MATLAB_DEBUG_RESULTS.md  MATLAB_FGSM_INVESTIGATION.md  NUMERICAL_PRECISION_ANALYSIS.md  PRECISION_LOSS_ANALYSIS.md  PYTHON_DEBUG_FINDINGS.md  Prompt_for_test_zonotope_Tango  SPLITTING_LOGIC_AND_PRECISION_ANALYSIS.md  SUMMARY_MATLAB_COMPARISON_IMPROVEMENTS.md  TODO_GENERATED_TESTS.md  TRANSLATION_STATUS_HYBRID_DYNAMICS.md  TRANSLATION_STATUS_SUMMARY.md  Translation prompt for testfiles_Tango  VERIFICATION_DIFFERENCES_ANALYSIS.md  VERIFY_COMPARISON.md  VERIFY_TEST_COMPARISON.md  ZERO_GENERATORS_ANALYSIS.md  ZONOTOPE_CONTAINS_IMPLEMENTATION_COMPARISON.md  ZONOTOPE_CONTAINS_PYTHON_VS_MATLAB_COMPARISON.md  ZONOTOPE_CONTAINS_TEST_COMPARISON.md  affineSolution_matlab_output.txt  afunc.py  (+484 more)
Archiv/: ABORTION_DIFFERENCE_ANALYSIS.md  ACTION_ITEMS_COMPLETED.md  ADDITIONAL_DIVERGENCES_FOUND.md  CODE_LOGIC_COMPARISON.md  COMPARISON_ABORTION_LOGIC.md  COMPARISON_AND_GROWTH_SUMMARY.md  COMPARISON_ERROR_ADM_HORIZON.md  COMPARISON_PLAN.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_INVESTIGATION_STATUS.md  COMPLETE_INVESTIGATION_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  CONTINUED_INVESTIGATION_SUMMARY.md  CORA_Translation_Instructions.md  CRITICAL_DISCOVERY_HESSIAN_TYPE.md  DIFFERENCES_FIXES.md  (+413 more)
(+2335 files in other folders)
