[tool.poetry]
name = "cora-python"
version = "0.1.0"
description = "Python translation of the CORA toolbox"
authors = ["CORA-Group"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.1"
scipy = "^1.13.0"
pytest = "^8.4"
pytest-mock = "^3.14.1"
matplotlib = "^3.9"
pycddlib = "^3.0.2"
cvxpy = "^1.6.6"
cvxopt = "^1.3.2"
ecos = "^2.0.14"
shapely = "^2.1.1"
onnx = "^1.18.0"
torch = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["cora_python/tests"]
pythonpath = ["."] 